--- a/app-chart/values.yaml
+++ b/app-chart/values.yaml
@@ -1,9 +1,7 @@
 # values.yaml
 
 name: app
-image:
-  name: pav30/app
-  version: latest
+image: pav30/app:latest
 mysql:
   host: mysql
   user: root
