--- a/app-chart/values.yaml
+++ b/app-chart/values.yaml
@@ -1,7 +1,7 @@
 # values.yaml
 
 name: app
-image: pav30/app:latest
+image: 339713101508.dkr.ecr.ap-south-1.amazonaws.com/two-tier:${BUILD_NUMBER}
 mysql:
   host: mysql
   user: root
