--- a/app-chart/templates/app-deploy.yaml
+++ b/app-chart/templates/app-deploy.yaml
@@ -29,3 +29,5 @@ spec:
           - name: MYSQL_DB
             value: {{ .Values.mysql.db }}
         imagePullPolicy: Always
+      imagePullSecrets:
+        - name: ecr-secret
